--- a/lists.html
+++ b/lists.html
@@ -5,6 +5,19 @@
         <meta name="author" content="Arvin">
         
         <title>lists</title>
+        <link rel="stylesheet" href="main.css" type="text/css">
     </head>
-    
+    <body>
+        <p>
+            <ol>
+                <li>helloo</li>
+                <li>this is an <abbr title="Abbreviation">abbr</abbr></abbr></li>
+                <li>byee</li>
+            </ol>
+            <ul>
+                <li>this is an unordered list</li>
+                <li>hmm</li>
+            </ul>
+        </p>
+    </body>
 </html>
