--- a/lists.html
+++ b/lists.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="main.css" type="text/css">
     </head>
     <body>
+        <h1>lists</h1>
+        <hr>
         <p>
             <ol>
                 <li>helloo</li>
@@ -17,7 +19,14 @@
             <ul>
                 <li>this is an unordered list</li>
                 <li>hmm</li>
+                <li>
+                    <address>
+                        221 B Baker St, London, England
+                    </address>
+                </li>
             </ul>
+            <dt>description term</dt>
+            <dd>description detail</dd>
         </p>
     </body>
 </html>
