--- a/lists.html
+++ b/lists.html
@@ -13,7 +13,7 @@
         <p>
             <ol>
                 <li>helloo</li>
-                <li>this is an <abbr title="Abbreviation">abbr</abbr></abbr></li>
+                <li>this is an <abbr title="Abbreviation">abbr</abbr></li>
                 <li>byee</li>
             </ol>
             <ul>
@@ -25,8 +25,9 @@
                     </address>
                 </li>
             </ul>
+        </p>
             <dt>description term</dt>
             <dd>description detail</dd>
-        </p>
+        
     </body>
 </html>
