--- a/html/htm1.html
+++ b/html/htm1.html
@@ -2,8 +2,11 @@
 <html lang="en">
      <head>
         <title>web page 1</title>
+        <style>
+            
+        </style>
      </head>
      <body>
-        <img src="" alt="">
+        <img src="src8/html.jpeg" alt="html logo">
      </body>
 </html>
